--- a/ConsoleApp3/ConsoleApp3.csproj
+++ b/ConsoleApp3/ConsoleApp3.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="T1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
